Fixed height overflow with multiple staves
Fixed issue where some rhythms with two staves were rendering larger
than the rhythm container.  Also improved the note spacing on resize
events.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,13 +34,11 @@ body {
     height:300px;
     text-align:center;
     overflow: hidden;
-    outline: 1px solid purple;
 }
 
 #rhythm {
     display:inline-block;
     white-space: nowrap;
-    outline: 1px solid red;
 }
 
 .preloader {
@@ -58,7 +56,6 @@ body {
 .system {
     display:inline-block;
     margin-top:40px;
-    outline: 1px solid blue;
 }
 
 .first {
@@ -67,20 +64,16 @@ body {
 
 .measure {
     display:inline-block;
-    outline: 1px solid green;
 }
 
 .note {
     display:inline-block;
     opacity:0;
     vertical-align: bottom;
-    outline: 1px solid orange;
 }
 
 .spacer {
     width:0px;
-    height:10px;
-    background-color:red;
     display:inline-block;
 }
 
